--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -32,7 +32,9 @@
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         {{#if user}}
-                        <a class="dropdown-item" href="/logout">Log out</a>
+                        <form action="/logout" method="POST">
+                            <button class="dropdown-item" type="submit">Log out</button>
+                        </form>
                         {{else}}
                         <a class="dropdown-item" href="/login">Log In</a>
                         <a class="dropdown-item" href="/signup">Sign Up</a>
