Added new user type - Vendor
# Defined Vendor Router in app.js

# Added new Collection for Vendor

# Added vendor.js for handling vendor related routes

# Added some basic routes for vendor related activities

# Added Vendor Helpers for Sign-up and Login

# Added new Header file in partials for Vendor

# Modified layout file to load vendor-header

# Added few pages for Vendors including - sign-up, login, add-product, edit-product & view-product

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -31,6 +31,8 @@
 {{!-- Code to determine which header file to choose according to the user type --}}
   {{#if admin}}
   {{>admin-header}}
+  {{else if vendor}}
+  {{>vendor-header}}
   {{else}}
   {{>user-header}}
   {{/if}}
