Added Admin side product Management Feature
# Added new collection for Product Categories

# Added Admin helpers to Add, View, Edit & Delete product categories

# Added a module called moment-timezone to display the Data and Time in a Organized fashion in product categories page

# Added Hbs files for Add, Edit & View product categories

# Modified the Add new product button in view products page

# Added product category Images to gitignore file

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -4,7 +4,9 @@
 
         <div class="row mt-4 justify-content-end">
 
-            <a href="/admin/add-product" class="col-md-2 btn btn-success">Add Product</a>
+            <form action="/admin/add-product" method="GET" class="col-md-2">
+                <button class="btn btn-success" type="submit">Add New Product</button>
+            </form>
 
         </div>
 
