Admin Header Modification for Adding Product Categories
# Added Product Categories to Admin Header

# Restructured Admin Header with new options

--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -9,13 +9,19 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/admin">All Products</a>
+            <a class="nav-link active" aria-current="page" href="/admin/order-summary">Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">All Orders</a>
+            <a class="nav-link" href="/admin">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">All Users</a>
+            <a class="nav-link" href="/admin/product-categories">Product Categories</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/vendors">All Vendors</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/users">All Users</a>
           </li>
         </ul>
         <div class="dropdown">
