Add Product Page Modified for fetching product categories from DB

--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -14,7 +14,12 @@
       </div>
       <div class="form-group">
         <label for="category">Category:</label>
-        <input type="text" class="form-control" id="category" name="category" required>
+        <select class="form-control" id="category" name="category" required>
+          <option value="" disabled selected>Select category</option>
+          {{#each productCategories}}
+          <option value="{{this.name}}">{{this.name}}</option>
+          {{/each}}
+        </select>
       </div>
       <div class="form-group">
         <label for="description">Description:</label>
