Configured User Managing for Admin

--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -12,16 +12,16 @@
             <a class="nav-link active" aria-current="page" href="/admin/order-summary">Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin">Products</a>
+            <a class="nav-link" href="/admin/manage-products">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin/product-categories">Product Categories</a>
+            <a class="nav-link" href="/admin/manage-product-categories">Product Categories</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin/vendors">All Vendors</a>
+            <a class="nav-link" href="/admin/manage-vendors">All Vendors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin/users">All Users</a>
+            <a class="nav-link" href="/admin/manage-users">All Users</a>
           </li>
         </ul>
         <div class="dropdown">
