Modified the Product Category addition to Product collection
# Modified the workflow in such a way that the category ID is stored in the Product Document inside Product Collection instead of Category Name

::: Modified product-helpers.js :::

# Added a function getProductCategoryById for finding out the category ID and name of a product using the product ID

::: Modified admin.js :::

# Used getProductCategoryById function in edit product route to display the product category prefilled.

::: Modified add-product.hbs :::

# Modified to store the category Id of the product instead of the category name

::: Modified edit-product.hbs :::

# Modified to display the existing product category prefilled

--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -17,7 +17,7 @@
         <select class="form-control" id="category" name="category" required>
           <option value="" disabled selected>Select category</option>
           {{#each productCategories}}
-          <option value="{{this.name}}">{{this.name}}</option>
+          <option value="{{this._id}}">{{this.name}}</option>
           {{/each}}
         </select>
       </div>
