--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -38,7 +38,7 @@
                     <th scope="row">{{this.id}}</th>
                     <td>{{this._id}}</td>
                     <td>{{this.name}}</td>
-                    <td>{{this.category}}</td>
+                    <td>{{this.category.name}}</td>
                     <td>{{this.description}}</td>
                     <td>{{this.price}}</td>
                     <td><img style="width: 50px; height: 50px" src="/product-images/{{this._id}}.jpg" alt="{{this.name}}"></td>
