--- a/app/views/admin/admin-order-summary.hbs
+++ b/app/views/admin/admin-order-summary.hbs
@@ -1,4 +1,4 @@
-{{!-- ==============================Past Orders Page============================== --}}
+{{!-- ==============================Order Summary Page============================== --}}
 
 <div style="display: flex; justify-content: center; padding-top: 40px ; height: 100vh; margin: 0; font-family: Arial, sans-serif; background-color: #f5f5f5;">
 
@@ -37,14 +37,14 @@
                         
                         <td>
 
-                            <form method="POST" action="/ordered-product-details">
+                            <form method="POST" action="/admin/order-details">
                                 <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">View Products</button>
                             </form>
 
                             {{#if this.cancellationStatus }}
 
-                            <form method="POST" action="/order-cancellation-status">
-                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">Cancellation Status</button>
+                            <form method="POST" action="/admin/order-cancellation-status">
+                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">Review Cancellation Request</button>
                             </form>
 
                             {{else}}
