Admin side - Order management - WIP

--- a/app/views/admin/admin-order-summary.hbs
+++ b/app/views/admin/admin-order-summary.hbs
@@ -40,24 +40,28 @@
                         
                         <td>
 
-                            <form method="POST" action="/admin/order-details">
+                            {{#if this.cancelledOrder }}
+
+                            <form method="POST" action="/admin/single-order-details">
+                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-danger animate__animated animate__fadeInLeft">Cancelled Order</button>
+                            </form>
+
+                            {{else}}
+
+                            <form method="POST" action="/admin/single-order-details">
                                 <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">View Products</button>
                             </form>
+
+                            {{/if}}
 
                         </td>
 
                         <td>
 
-                            {{#if this.cancelledOrder }}
-
-                            <form method="POST" action="/admin/cancelled-order-details">
-                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">Cancelled Order Details</button>
-                            </form>
-
-                            {{else if this.cancellationStatus }}
+                            {{#if this.cancellationStatus }}
 
                             <form method="POST" action="/admin/review-order-cancellation-request">
-                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft" onclick="return confirm('Are you sure that you want to cancel this order ?')">Review Cancellation Request</button>
+                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">Review Cancellation Request</button>
                             </form>
 
                             {{else}}
