Admin Side Order Cancellation Completed
User Side Order Cancellation - WIP

--- a/app/views/admin/admin-order-summary.hbs
+++ b/app/views/admin/admin-order-summary.hbs
@@ -13,13 +13,15 @@
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Date</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">User</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Order Id</th>
-                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Phone Number</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Phone</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Address</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Payment Method</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Amount</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Order Status</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Details</th>
-                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Actions</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Delivery</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Cancellation</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Return</th>
                 </tr>
             </thead>
 
@@ -37,39 +39,98 @@
                         <td>{{this.paymentMethod}}</td>
                         <td>{{this.orderValue}}</td>
                         <td>{{this.orderStatus}}</td>
-                        
+
+                        {{!-- ======================== Details ======================== --}}
                         <td>
 
-                            {{#if this.cancelledOrder }}
-
                             <form method="POST" action="/admin/single-order-details">
-                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-danger animate__animated animate__fadeInLeft">Cancelled Order</button>
+                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">View</button>
                             </form>
 
-                            {{else}}
+                        </td>
 
-                            <form method="POST" action="/admin/single-order-details">
-                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">View Products</button>
-                            </form>
+                        {{!-- ======================== Delivery ======================== --}}
+                        <td>
+
+                            {{!-- ======================== Order Status Management For Placed Orders ======================== --}}
+
+                            {{#if (eq this.orderStatus 'Order Placed') }}
+                            
+                                <button class="btn btn-info animate__animated animate__fadeInLeft" onclick="confirmAndChangeOrderStatus('{{this._id}}', 'shipped')">Ship Order</button>
+                            
+                            {{else if (eq this.orderStatus 'Order Shipped') }}
+                            
+                                <button class="btn btn-warning animate__animated animate__fadeInLeft" onclick="confirmAndChangeOrderStatus('{{this._id}}', 'delivered')">Mark Delivered</button>
+                            
+                            {{else if (eq this.orderStatus 'Delivered') }}
+                            
+                                <button class="btn btn-outline-success animate__animated animate__fadeInLeft">Completed</button>
+                            
+                            {{else if (eq this.orderStatus 'Cancelled') }}
+                            
+                                <button class="btn btn-outline-danger animate__animated animate__fadeInLeft">Cancelled</button>
+                            
+                            {{else if (eq this.orderStatus 'Returned') }}
+                            
+                                <button class="btn btn-outline-danger animate__animated animate__fadeInLeft">Returned</button>
+                            
+                            {{/if}}
+
+
+                        </td>
+
+                        {{!-- ======================== Cancel ======================== --}}
+                        <td>
+
+                            {{!-- ======================== Order Cancellation Management For Placed & Shipped Orders ======================== --}}
+
+                            {{#if (eq this.cancellationStatus 'Pending Admin Approval') }}
+
+                                <form method="POST" action="/admin/review-order-cancellation-request">
+                                    <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-warning animate__animated animate__fadeInLeft">Review</button>
+                                </form>
+
+                            {{else if (eq this.cancellationStatus 'Cancellation Request Approved')}}
+                            
+                                <button class="btn btn-outline-danger animate__animated animate__fadeInLeft" >Cancelled</button>
+
+                            {{else if (eq this.cancellationStatus 'Cancellation Request Rejected')}}
+                            
+                                <button class="btn btn-outline-danger animate__animated animate__fadeInLeft" >Rejected</button>
+
+                            {{else if (eq this.cancellationStatus 'Cancelled by Platform')}}
+                            
+                                <button class="btn btn-outline-danger animate__animated animate__fadeInLeft" >Platform Cancelled</button>
+                                    
+                            {{else if (or (eq this.orderStatus 'Order Placed') (eq this.orderStatus 'Order Shipped') )}}
+
+                                <form method="POST" action="/admin/admin-side-order-cancellation">
+                                    <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft" onclick="return confirm('Are you sure that you want to cancel this order ?')">Cancel</button>
+                                </form>
 
                             {{/if}}
 
                         </td>
 
+                        {{!-- ======================== Return ======================== --}}
                         <td>
 
-                            {{#if this.cancellationStatus }}
+                            {{!-- ======================== Order Return Management For Delivered Orders ======================== --}}
 
-                            <form method="POST" action="/admin/review-order-cancellation-request">
-                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">Review Cancellation Request</button>
-                            </form>
+                            {{#if (eq this.returnStatus 'Pending Admin Approval') }}
 
-                            {{else}}
+                                <form method="POST" action="/admin/review-order-return-request">
+                                    <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">Review Return Request</button>
+                                </form>
 
-                            <form method="POST" action="/admin/admin-side-order-cancellation">
-                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft" onclick="return confirm('Are you sure that you want to cancel this order ?')">Cancel Order</button>
-                            </form>
+                            {{else if (eq this.returnStatus 'Return Request Approved')}}
+                            
+                                <button class="btn btn-outline-danger animate__animated animate__fadeInLeft" >Returned Order</button>
 
+                            {{else if (eq this.returnStatus 'Return Request Declined')}}
+                            
+                                <button class="btn btn-outline-danger animate__animated animate__fadeInLeft" >Return Declined</button>
+    
                             {{/if}}
 
                         </td>
@@ -115,3 +176,51 @@
     }
 
 </style>
+
+<script>
+
+    function confirmAndChangeOrderStatus(orderId, status) {
+
+      if (confirm(`Are you sure that you want to mark this order as ${status}?`)) {
+
+        fetch('/admin/change-order-status', {
+
+          method: 'POST',
+
+          headers: {'Content-Type': 'application/json'},
+
+          body: JSON.stringify({
+
+            orderId: orderId,
+            
+            status: status
+
+          })
+
+        })
+        .then(response => {
+
+          if (response.status) {
+
+            location.reload();
+
+          } else {
+
+            console.error('Error updating order status');
+            /* This will be displayed on browser Console */
+
+          }
+
+        })
+        .catch(error => {
+
+          console.error('Error updating order status:', error);
+          /* This will be displayed on browser Console */
+
+        }); 
+
+      }
+
+    }
+
+</script>
