--- a/app/views/admin/admin-order-summary.hbs
+++ b/app/views/admin/admin-order-summary.hbs
@@ -15,7 +15,7 @@
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Order Id</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Phone</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Address</th>
-                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Payment Method</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Payment</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Amount</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Order Status</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Details</th>
