--- a/app/views/admin/admin-order-summary.hbs
+++ b/app/views/admin/admin-order-summary.hbs
@@ -17,7 +17,7 @@
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Address</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Payment</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Amount</th>
-                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Order Status</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Status</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Details</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Delivery</th>
                     <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Cancellation</th>
